Still more compilation fixes